test-cases/final-dump/incompatible_generics_2.exp
Error detected during type checking of module(s) incompatible_generics_2
final-dump/incompatible_generics_2.wybe:1:27: Type error in call to proc +, argument 1
final-dump/incompatible_generics_2.wybe:1:27: Type error in call to proc +, argument 2
